openshift-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sahabat-endpoint
  labels:
    app: sahabat-endpoint
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: sahabat-endpoint
